// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contract-event-stream tests in node environment fromPolling can track events emitted by send method 1`] = `
Object {
  "address": Anything,
  "blockHash": Anything,
  "blockNumber": 3,
  "event": "Update",
  "id": Anything,
  "logIndex": Anything,
  "raw": Object {
    "data": Anything,
    "topics": Array [
      Anything,
    ],
  },
  "returnValues": Result {
    "0": "0",
    "storedData": "0",
  },
  "signature": Anything,
  "transactionHash": Anything,
  "transactionIndex": 0,
  "type": "mined",
}
`;

exports[`contract-event-stream tests in node environment fromPolling can track events emitted by send method 2`] = `
Object {
  "address": Anything,
  "blockHash": Anything,
  "blockNumber": 4,
  "event": "Update",
  "id": Anything,
  "logIndex": Anything,
  "raw": Object {
    "data": Anything,
    "topics": Array [
      Anything,
    ],
  },
  "returnValues": Result {
    "0": "5",
    "storedData": "5",
  },
  "signature": Anything,
  "transactionHash": Anything,
  "transactionIndex": 0,
  "type": "mined",
}
`;
